5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1575_579.log
== TEST (2019-03-14 12:13:06) 
-- CODE:
print("A UFAM tem",2016 - 110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1906 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:13:14) 
-- CODE:
print("A UFAM tem",2016 - 110,"anos de fundacao.")
-- EXECUTION TIME:
0.136854
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1906 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:13:22) 
-- CODE:
print("A UFAM tem",2016 - 110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1906 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:13:37) 
-- CODE:
print("A UFAM tem",2016 - 1906,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:13:45) 
-- CODE:
print("A UFAM tem",2016 - 1906,"anos de fundacao.")
-- EXECUTION TIME:
0.140713
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:14:21) 
-- CODE:
print("A UFAM tem",110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:14:27) 
-- CODE:
print("A UFAM tem",110,"anos de fundacao.")
-- EXECUTION TIME:
0.296406
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:15:47) 
-- CODE:
print("A UFAM tem",2019 - 110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:16:03) 
-- CODE:
print("A UFAM tem",2019 - 110,"anos de fundacao.")
-- EXECUTION TIME:
0.185542
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 1909 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:16:05) 
-- CODE:
print("A UFAM tem",2019 - 110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:16:30) 
-- CODE:
print("A UFAM tem",2016 - 2019,"anos de fundacao.")
-- OUTPUT:
A UFAM tem -3 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:16:43) 
-- CODE:
print("A UFAM tem",2016 - 2019,"anos de fundacao.")
-- EXECUTION TIME:
0.158134
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem -3 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:16:57) 
-- CODE:
print("A UFAM tem",2019 - 110,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 1909 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:17:12) 
-- CODE:
print("A UFAM tem",2019 - 1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 110 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:17:23) 
-- CODE:
print("A UFAM tem",2019 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.127509
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 110 anos de fundacao.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:17:50) 
-- CODE:
print("A UFAM tem",2019 - XXXX,"anos de fundacao.")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print("A UFAM tem",2019 - XXXX,"anos de fundacao.")
NameError: name 'XXXX' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:20:10) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 12:20:23) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 12:20:30) 
-- CODE:
print("A UFAM tem",2016 - 1909,"anos de fundacao.")
-- EXECUTION TIME:
0.167577
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
